# graphql_parser

./: .gitignore  .pre-commit-config.yaml  README.md  gql_generated_schemas.py  mypy.ini  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: test.yml
graphql_parser/: dql.py  grammar.py  graphql.py  parsed_schema.py  utils.py
graphql_parser/templates/: dql_query.html.jinja2  dql_upsert.html.jinja2  schema.html.jinja2
scripts/: example.graphql  gql.py  query.dql
tests/: conftest.py  test_dql.py  test_format_property.py  test_grammar.py
tests/fixtures/: directives.py  dql_mutations.py  dql_query_headers.py  header.py  object.py  objects.py  param.py  params.py  queries.py  rdfs.py  schemas.py  upserts.py
